--- a/src/app/components/quizz/quizz.component.css
+++ b/src/app/components/quizz/quizz.component.css
@@ -1,5 +1,5 @@
 .quizz__container {
-  width: 80%;
+  width: 60%;
   margin: auto;
   margin-top: 20px;
 }
@@ -20,9 +20,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid #4224b9;
+  border: 1px solid #494949;
   border-radius: 8px;
-  background-color: #654ED2;
+  background-color: #0f0394;
   width: 100%;
   height: 200px;
   font-size: 20px;
@@ -41,7 +41,7 @@
 .btn-option {
   background-color: transparent;
   border-radius: 8px;
-  border: 1px solid #18ab29;
+  border: 1px solid #4400ff;
   width: 50%;
   display: inline-block;
   cursor: pointer;
@@ -50,11 +50,12 @@
   font-size: 17px;
   padding: 16px 31px;
   text-decoration: none;
-  text-shadow: 0px 1px 0px #2f6627;
+  text-shadow: 0px 1px 0px #283ca0;
 }
 
 .btn-option:hover {
-  background-color: #5cbf2a;
+  background-color: #0f0394;
+  color: white;
 }
 
 .btn-option:active {
@@ -62,10 +63,10 @@
   top: 1px;
 }
 
-.quizz__results {
+.quizz__results{
   width: 100%;
   height: 350px;
-  background-color: rgb(33,2,57);
+  background-color: #0f0394;
   border-radius: 10px;
   padding: 30px;
   display: flex;
@@ -73,4 +74,3 @@
   justify-content: center;
   align-items: center;
 }
-
